# commodity-option-data-manager

./: .env.example  .gitignore  AGENTS.md  PROJECT-CONTEXT.md  pyproject.toml  项目需求文档.md
docs/: project-index.md  project-status.md
docs/changes/: change-requests.md
docs/governance/: business-constraints.md  investor-brief.md  risk-register.md
docs/knowledge/: README.md  architecture-decisions.md  code-patterns.md  debugging-lessons.md  failed-attempts.md  performance-baselines.md  sdk-facts.md  test-data-and-results.md
docs/operations/: deployment-log.md  linux-server-deployment.md  wsl2-ubuntu.md
docs/plans/: v0.1-release-plan.md
docs/product/: backlog.md  roadmap.md
docs/quality/: engineering-principles.md  quality-plan.md  technical-debt.md
docs/release/: release-plan.md
docs/security/: security-plan.md
docs/specs/: README.md
option_data_manager/: __init__.py
scripts/: odm-server.sh  setup-wsl-ubuntu.sh  smoke-local-app.py
tests/: test_acquisition.py  test_api_app.py  test_api_keys.py  test_chain_collector.py  test_collect_market_cli.py  test_collection_plan.py  test_collection_state.py  test_compare_iv_windows_cli.py  test_current_slice_preservation.py  test_imports.py  test_log_retention.py  test_market_collector.py  test_market_discovery.py  test_metrics_dirty_queue.py  test_metrics_worker.py  test_moneyness.py  test_operations_resources.py  test_parallel_collector.py  test_quote_streamer.py  test_realtime_health.py  test_settings.py  test_tqsdk_cli.py  test_trading_sessions.py  test_webui_app.py  test_webui_read_model.py
(+84 files in other folders)
